# local-bounds-mo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmark/: benchmark.cpp  results.txt
examples/: basic_usage.cpp
include/: local_bounds.hpp
include/local_bounds/: bound_set.hpp  bound_set_tree.hpp  dominance.hpp  neighborhood_bound_set.hpp  types.hpp
include/structures/: lb_tree.hpp  linear_list.hpp
tests/: test_bound_set.cpp  test_dominance.cpp  test_neighborhood_bound_set.cpp
